crates/runtime/tests/search/snapshots/integration_models__search__cayenne_memory-no_vector_engine-no_text_engine-dataset-multi_column_megascience_keywords_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.03",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The even multiples of 5 between 0 and 60 are the multiples of 10: 10, 20, 30, 40, and 50. There are $\\boxed{5}$ such numbers."
        ],
        "question": [
          "How many numbers between 0 and 60 are even multiples of 5?"
        ]
      },
      "primary_key": {
        "id": 470
      }
    },
    {
      "_score": "0.03",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ],
        "question": [
          "Which base number, when raised to the fifth power, equals thirty-two?"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": "0.03",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The number of ways is \\( 18 \\times 17 \\times 16 = \\boxed{4896} \\)."
        ],
        "question": [
          "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
        ]
      },
      "primary_key": {
        "id": 361
      }
    },
    {
      "_score": "0.02",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "To find the number of groups of 7 in 21, divide 21 by 7:  \n\\[ 21 \\div 7 = 3 \\]  \nThus, there are $\\boxed{3}$ groups of 7 in 21."
        ],
        "question": [
          "Find the number of groups of 7 in 21."
        ]
      },
      "primary_key": {
        "id": 359
      }
    }
  ]
}
