crates/runtime/tests/search/snapshots/integration_models__search__cayenne_memory-no_vector_engine-no_text_engine-dataset-multi_embeddings_megascience_vector_search_sql_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
[
  {
    "id": 189,
    "_score": 0.705
  },
  {
    "id": 212,
    "_score": 0.689
  },
  {
    "id": 1277,
    "_score": 0.687
  },
  {
    "id": 195,
    "_score": 0.673
  }
]
