crates/runtime/tests/search/snapshots/integration_models__search__cayenne_memory-no_vector_engine-no_text_engine-view_union_all_join-hybrid_multiple_column_megascience_vector_search_sql_basic.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
"HTTP error: 400 Bad Request - Failed to execute query: Error during planning: User function 'vector_search' is called on table 'spice.public.qs' that does not have an embedding index on 'answer' column. Indexed column(s): question."
