crates/runtime/tests/search/snapshots/integration_models__search__cayenne_memory-no_vector_engine-no_text_engine-view_union_all_join-hybrid_multiple_column_megascience_vector_search_sql_random_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by _score desc LIMIT 4"
---
Could not prepare EXPLAIN plan: Query execution failed: code: 'Client specified an invalid argument', message: "User function 'vector_search' is called on table 'spice.public.qs' that does not have an embedding index on 'answer' column. Indexed column(s): question."
